--- a/ciclos-y-estructuras-de-control-de-flujo/index.html
+++ b/ciclos-y-estructuras-de-control-de-flujo/index.html
@@ -6,12 +6,14 @@
     <title>Ciclos y Estructuras De Control De Flujo</title>
 </head>
 <body>
-    <h1>Ciclos y Estructuras de Control De Flujo - Bases</h1>
+    <h1>Ciclos</h1>
 
     <!-- <script src="js/valor-referencia.js"></script> -->
     <!-- <script src="js/if-else.js"></script> -->
     <!-- <script src="js/logica-booleana.js"></script> -->
     <!-- <script src="js/ternario.js"></script> -->
     <!-- <script src="js/protip-ternario.js"></script> -->
+    <!-- <script src="js/ciclos/while-do-while.js"></script> -->
+    <script src="js/ciclos/for-for-in-for-of.js"></script>
 </body>
 </html>
